# controllers/Information.js
@@ -10,8 +10,8 @@ module.exports.getAllAreaCode = function getAllAreaCode (req, res, next) {
   Information.getAllAreaCode(req.swagger.params, res, next);
 };
 
-module.exports.getAreaCodeDescription = function getAreaCodeDescription (req, res, next) {
-  Information.getAreaCodeDescription(req.swagger.params, res, next);
+module.exports.getStateByAreaCode = function getStateByAreaCode (req, res, next) {
+  Information.getStateByAreaCode(req.swagger.params, res, next);
 };
 
 module.exports.getPhoneDescription = function getPhoneDescription (req, res, next) {
